--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     fda
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
